[gd_scene load_steps=5 format=3 uid="uid://d1demcer6jenb"]

[ext_resource type="Script" uid="uid://bxjtbewgs4xrw" path="res://Scripts/Player.gd" id="1_b43ah"]

[sub_resource type="Animation" id="Animation_shmu5"]
length = 0.001

[sub_resource type="Animation" id="Animation_b43ah"]
resource_name = "death"
length = 0.23

[sub_resource type="AnimationLibrary" id="AnimationLibrary_shmu5"]
_data = {
&"RESET": SubResource("Animation_shmu5"),
&"death": SubResource("Animation_b43ah")
}

[node name="Head" type="Node2D" groups=["Player"]]
script = ExtResource("1_b43ah")

[node name="Workers" type="Node2D" parent="." groups=["WorkerGroup"]]

[node name="PlayerPositionTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_shmu5")
}

[node name="Position" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="Position"]
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 2.0

[connection signal="child_entered_tree" from="Workers" to="." method="_on_workers_child_entered_tree"]
[connection signal="child_exiting_tree" from="Workers" to="." method="_on_workers_child_exiting_tree"]
[connection signal="timeout" from="PlayerPositionTimer" to="." method="_on_player_position_timer_timeout"]
